--- a/pertemuan8/layout.html
+++ b/pertemuan8/layout.html
@@ -6,54 +6,10 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="style.css">
 		<style>
-			body {
-				font-family: 'Fira Sans', 'Noto Sans JP', sans-serif;
-			}
-			
-			.header {
-				background-color: #000000; 
-				width: 100%;
-				height: 80px;
-				padding-top: 40px;
-				font-size: 2em;
-			}
-			
-			.body {
-				width: 100%;
-				display: grid;
-				grid-template-columns: repeat(3, 1fr);
-			}
-			
-			.sidebar {
-				background-color: #666666;
-				width: 20%;
-				height: 400px;
-				float: left;
-			}
-			
 			.main {
-				background-color: #006600;
-				width: 60%;
-				height: 400px;
-				float: left;
-			}
-			
-			.footer {
-				background-color: #000066; 
-				width: 100%;
-				height: 60px;
-				clear: both;
-			}
-			
-			footer {
-				padding-top: 20px;
-				font-size: 20px;
-			}
-			
-			.white-center {
-				color: #ffffff;
-				text-align: center;
+				background-color: #000066;
 			}
 		</style>
 	</head>
@@ -64,7 +20,7 @@
 		<div class="sidebar white-center">
 			Left Sidebar
 		</div>
-		<div class="main white-center">
+		<div class="main white-center" style="background-color: #006600;">
 			Main Content
 		</div>
 		<div class="sidebar white-center">
